# Android-AutoMake-Examples

./: .gitignore  Makefile.am  Makefile.in  build-android.sh  configure  configure.ac
lib1/: Makefile.am  Makefile.in  hello.c  hello.h
lib2/: Makefile.am  Makefile.in  add.h
scripts/: Makefile.am  run.sh
src/: Makefile.am  Makefile.in  main.c
